<resources>
    <string name="app_name">Popular Movies</string>
    <string name="popular">most popular</string>
    <string name="most_popular">most popular</string>
    <string name="top_rated">top rated</string>
    <string name="favorites">favorites</string>
    <string name="movie_name_dummy">The Arrival</string>
    <string name="movie_year_dummy">2016</string>
    <string name="movie_length_dummy">120 min</string>
    <string name="movie_rating_dummy">8.1/10</string>
    <string name="fav_button_off">+ Favorite</string>
    <string name="fav_button_on">- Favorite</string>
    <string name="ratings_cont">/10</string>
    <string name="basic_review_text">review</string>
    <string name="basic_trailer_text">trailer</string>
    <string name="snackbar_text">Sorry. No internet connection.</string>
    <!--<string name="movie_name_dummy">The Arrival</string>-->





    <!--CREATING DATA FOR FILLING THE LAYOUT-->

    <string name="dummy_mt">Finding Nemo</string>
    <string name="dummy_movie_year">2016</string>
    <string name="dummy_trailers_number">0 trailers</string>
    <string name="dummy_reviews_number">0 reviews</string>
    <string name="dummy_movie_rating">8.1/10</string>
    <string name="dummy_fav_button_off">+ Favorite</string>
    <string name="dummy_trailer_title">Trailers: </string>
    <string name="dummy_trailer_name">Trailer 1</string>
    <string name="dummy_image_desc">Image description</string>
    <string name="dummy_overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo sapien eu ante placerat, nec dignissim lacus consectetur. Nullam porttitor dolor dui, a vulputate sem bibendum sollicitudin. Fusce id hendrerit mi. Aliquam iaculis diam nec pretium tempor.</string>
    <string name="new_reviews_title">Reviews:</string>
    <string name="new_review_author_name">Written by: </string>

</resources>
