<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jonathanoliveira.org.popularmovies.ui.views.MovieDetails_Activity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent_constraint"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:paddingBottom="30dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="30dp"
            android:scrollHorizontally="false"
            android:text="@string/movie_name_dummy"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/background_light"
            app:layout_constraintTop_toTopOf="@id/parent_constraint"
            app:layout_constraintStart_toStartOf="@id/parent_constraint"
            app:layout_constraintEnd_toEndOf="@id/parent_constraint" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintHeight_max="100dp"
            app:layout_constraintStart_toStartOf="@+id/parent_constraint"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            app:layout_constraintWidth_max="200dp"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:scrollHorizontally="false"
            android:text="@string/movie_year_dummy"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movie_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/movie_length_dummy"
            android:scrollHorizontally="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="monospace"
            android:textStyle="bold|italic"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/movie_year"
            app:layout_constraintTop_toBottomOf="@+id/movie_year"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_rating_dummy"
            android:layout_marginTop="6dp"
            android:fontFamily="monospace"
            android:scrollHorizontally="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/movie_length"
            app:layout_constraintTop_toBottomOf="@+id/movie_length"
            tools:layout_editor_absoluteX="0dp" />

        <ToggleButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textOff="@string/fav_button_off"
            android:textOn="@string/fav_button_on"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:layout_marginTop="10dp"
            android:scrollHorizontally="false"
            android:text="TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView "
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintStart_toStartOf="@+id/parent_constraint"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/divisor"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
            app:layout_constraintStart_toStartOf="@+id/parent_constraint"
            app:srcCompat="@android:color/darker_gray"
            tools:layout_editor_absoluteX="0dp" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>