<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/new_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@android:color/holo_blue_dark"
        android:paddingBottom="30dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="30dp"

        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dummy_mt" />

    <ImageView
        android:id="@+id/new_movie_poster"
        android:layout_width="157dp"
        android:layout_height="218dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_movie_title"
        app:srcCompat="@android:color/darker_gray"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/dummy_image_desc"/>

    <TextView
        android:id="@+id/new_movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        tools:text="@string/dummy_movie_year"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/new_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/new_movie_title"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/new_movie_lentgh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/new_movie_year"
        app:layout_constraintTop_toBottomOf="@+id/new_movie_year"
        tools:text="@string/dummy_movie_length" />

    <TextView
        android:id="@+id/new_movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/new_movie_lentgh"
        app:layout_constraintTop_toBottomOf="@+id/new_movie_lentgh"
        tools:text="@string/dummy_movie_rating" />

    <ToggleButton
        android:id="@+id/new_movie_fav_btn"
        style="@style/Base.AlertDialog.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="66dp"
        android:fontFamily="monospace"
        android:textOff="@string/fav_button_off"
        android:textOn="@string/fav_button_on"
        app:layout_constraintLeft_toRightOf="@+id/new_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/new_movie_rating" />

    <TextView
        android:id="@+id/new_movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:scrollHorizontally="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_movie_poster"
        tools:text="@string/dummy_overview"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:color/darker_gray"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/new_movie_overview"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/dummy_image_desc" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/dummy_trailer_title"
        android:layout_marginStart="10dp" />

    <ImageButton
        android:id="@+id/new_play_btn_1"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_play"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/dummy_image_desc"/>

    <TextView
        android:id="@+id/new_trailer_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_play_btn_1"
        app:layout_constraintLeft_toRightOf="@+id/new_play_btn_1"
        app:layout_constraintTop_toTopOf="@+id/new_play_btn_1"
        app:layout_constraintVertical_bias="0.5"
        tools:text="@string/dummy_trailer_name" />

    <ImageView
        android:id="@+id/new_trailer_div_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_play_btn_1"
        app:srcCompat="@android:color/darker_gray"
        android:contentDescription="@string/dummy_image_desc"/>

    <ImageButton
        android:id="@+id/new_play_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_play"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/new_play_btn_1"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/new_play_btn_1"
        android:contentDescription="@string/dummy_image_desc"/>

    <TextView
        android:id="@+id/new_trailer_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart ="24dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:fontFamily="monospace"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_play_btn_2"
        app:layout_constraintLeft_toRightOf="@+id/new_play_btn_2"
        app:layout_constraintTop_toTopOf="@+id/new_play_btn_2"
        app:layout_constraintVertical_bias="0.5"
        tools:text="@string/dummy_trailer_name" />

    <ImageView
        android:id="@+id/new_trailer_div_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_play_btn_2"
        app:srcCompat="@android:color/darker_gray"
        android:contentDescription="@string/dummy_image_desc"/>

    <ImageButton
        android:id="@+id/new_play_btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:srcCompat="@android:drawable/ic_media_play"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/new_play_btn_2"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/new_play_btn_2"
        android:contentDescription="@string/dummy_image_desc"/>

    <TextView
        android:id="@+id/new_trailer_name_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart ="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:visibility="gone"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_play_btn_3"
        app:layout_constraintLeft_toRightOf="@+id/new_play_btn_3"
        app:layout_constraintTop_toTopOf="@+id/new_play_btn_3"
        app:layout_constraintVertical_bias="0.47"
        tools:text="@string/dummy_trailer_name" />

    <ImageView
        android:id="@+id/new_trailer_div_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_play_btn_3"
        app:srcCompat="@android:color/darker_gray"
        android:contentDescription="@string/dummy_image_desc"/>

</android.support.constraint.ConstraintLayout>

</ScrollView>